# a2jmidid

./: .gitignore  AUTHORS  AUTHORS.rst  CHANGELOG.rst  CHANGES  INSTALL  INSTALLATION.rst  Makefile  Makefile.am  NEWS  README  README.rst  a2j  a2j_control  a2jmidi_bridge.c  a2jmidid.c  a2jmidid.h  bootstrap  conf.c  conf.h  config.h.in  configure.ac  dbus.c  dbus.h  dbus_iface_control.c  dbus_iface_control.h  dbus_iface_introspectable.c  dbus_internal.h  gitversion_regenerate.sh  install_script.sh  internals.txt  j2amidi_bridge.c  jack.c  jack.h  jack_compat.h  log.c  log.h  meson.build  meson_options.txt  org.gna.home.a2jmidid.service.in  (+15 more)
man/: a2j.1  a2j_control.1  a2jmidi_bridge.1  a2jmidid.1  j2amidi_bridge.1
